fix(core): reset des lists génériques ne se fait pas sur le spacing

--- a/packages/core/src/styles/global/module/_reset.scss
+++ b/packages/core/src/styles/global/module/_reset.scss
@@ -18,14 +18,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-ul {
-  @include dse-class() {
-    padding: 0;
-    margin: 0;
-  }
-}
-
-li {
+ul, ol {
   @include dse-class() {
     list-style: none;
   }
